# bebelm

./: .gitignore  Cargo.toml  README.md  benchmark.sh  design.md  profile.sh
.cargo/: config.toml
.github/workflows/: ci.yml
src/: agent.rs  cache.rs  chat.rs  config.rs  gguf.rs  lib.rs  main.rs  model.rs  sampler.rs  tokenizer.rs  tool.rs
src/kernels/: attention.rs  conv.rs  dequant.rs  elementwise.rs  matmul.rs  mod.rs  rope.rs
tests/: end_to_end.rs  golden_prompt.txt
