[package]
name = "bebelm"
version = "0.1.0"
edition = "2021"
description = "CPU-only, pure-Rust inference for Liquid AI LFM2.5-8B-A1B (Q4_K_M)"

[dependencies]
# mmap the (~5 GB) GGUF read-only: lazy paging, shared page cache, no upfront read+alloc.
# Pure Rust; FFI into the already-present system libc (no system package to install).
memmap2 = "0.9"

# Data-parallel iterators on a persistent thread pool. Pure Rust, built on std threads;
# no system package to install.
rayon = "1"

# Fully optimize the dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3

# Low optimization level in debug mode
# Level 1 is much faster than no optimization,
# But still ok for stepping through when debugging
[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
